# opt

./: README.md
Translator10V/opt_lab1/: LexAnaliz.cpp  LexAnaliz.h  main.cpp
Translator10V/opt_rgr/: LexAnaliz.cpp  LexAnaliz.h  SyntaxAnaliz.cpp  SyntaxAnaliz.h  main.cpp
Translator11V/: CodeGenerator.cpp  CodeGenerator.hpp  LexAnaliz.cpp  LexAnaliz.h  Main.cpp  TranslatorConstants.hpp
Translator12V/opt_lab1/: LexAnaliz.cpp  Main.cpp
Translator12V/opt_lab2/: Generator.cpp  Generator.h  LexAnaliz.cpp  Main.cpp  Parser.cpp  opt_lab2.sln  opt_lab2.vcxproj  opt_lab2.vcxproj.filters
Translator12V/opt_rgr/: LexAnaliz.cpp  LexAnaliz.h  Main.cpp  Parser.cpp  Parser.h
Translator12V_2/Project1/: LexParser.cpp  Node.h  Project1.sln  Project1.vcxproj  Project1.vcxproj.filters  Source.cpp  SynParser.cpp  SynParser.h  Utils.cpp
Translator12V_2/opt_lab1/: CategoryWorkers.cpp  LexParser.cpp  LexParser.h  Source.cpp  TypesFmd.h  Utils.cpp  Utils.h
Translator12V_2/opt_rgr/: CategoryWorkers.h  LexParser.h  SynParser.cpp
Translator15V/OPT2/: Context.h  PrintFunctions.cpp  PrintFunctions.h  SyntacticalAnalyzer.cpp  SyntacticalAnalyzer.h  TokenFunctions.cpp  TokenFunctions.h  Utils.cpp  Utils.h  (+2 more)
Translator16V_2/: README.md  input  semantyxer.py  syntaxer.py  translator.py
Translator18V/: LexAnaliz.cpp  SyntaxAnaliz.cpp  test1.sig  test1.sig.lst  ПротоколЛаб2.docx
Translator_xz/Labs/: CMakeLists.txt  CodeGenerator.cpp  CodeGenerator.h  InformationTables.h  LexicalAnalyzer.cpp  LexicalAnalyzer.h  SyntacticalAnalyzer.cpp  SyntacticalAnalyzer.h  main.cpp  tree_util.hh
(+284 files in other folders)
